resources/ej2-base/releasenotes/Xamarin/Release-Notes/v18.3.0.47/SfPdfViewer.md
## SfPdfViewer

### Features
{:#sfpdfviewer-features}

* \#289673 - The support to expose the custom stamp views in the event arguments has been implemented.

### Bug Fixes
{:#sfpdfviewer-bug-fixes}

* \#298304 – The existing free text annotation’s text size and the border will be preserved properly. 
[UWP] The page navigation buttons will not disappear while switching the view modes. 
Text selection will now work properly in the PDF. 
* \#294995 - Annotation will now work properly for the German locale.
* \#295848 - [Android, iOS] Application will no longer crash while saving the PDF document.
* \#295500 - [UWP] Stamp annotations are now resized properly. 
* \#297929 - Application will no longer crash while loading the PDF document. 
* \#297367 - [Android] Application will no longer crash while saving the PDF with annotations. 
* \#158450 – The application language culture will no longer change while using the SfPdfViewer. 
* \#294360 - [UWP] The Multi-select list box form field is now properly exported. 
* \#157948 - [iOS] Stamp annotation is now moving and scaling properly. 
* \#157930 - Application will no longer crash while adding the stamp annotation. 
* \#157926 - [iOS]The [VerticalOffset](https://help.syncfusion.com/cr/xamarin/Syncfusion.SfPdfViewer.XForms.SfPdfViewer.html#Syncfusion_SfPdfViewer_XForms_SfPdfViewer_VerticalOffset) API now navigates to the correct location. 
* \#291804 - [UWP] The bookmark button will no longer be visible when the [BookmarkPaneVisible](https://help.syncfusion.com/cr/xamarin/Syncfusion.SfPdfViewer.XForms.SfPdfViewer.html#Syncfusion_SfPdfViewer_XForms_SfPdfViewer_BookmarkPaneVisible) is set to false. 
* \#296432 - Application will no longer crash while importing the annotations. 
[UWP] Application will no longer crash while loading the PDF document. 
* \#157698 - [iOS] Application will no longer crash with the IndexOutOfRangeException while adding the handwritten signatures. 
* \#292597 - [Android] The PDF is now rendered properly. 
* \#294728 - [UWP] Document link annotation will now work properly after saving and reloading. 
* \#292819 - [Android] [VerticalOffset](https://help.syncfusion.com/cr/xamarin/Syncfusion.SfPdfViewer.XForms.SfPdfViewer.html#Syncfusion_SfPdfViewer_XForms_SfPdfViewer_VerticalOffset) now navigates to the correct location. 
* \#290426 – The tap gesture event is now added properly for the stamp annotations. 
* \#292459 - [iOS]The  [ZoomPercentage](https://help.syncfusion.com/cr/xamarin/Syncfusion.SfPdfViewer.XForms.SfPdfViewer.html#Syncfusion_SfPdfViewer_XForms_SfPdfViewer_ZoomPercentage) API is now working properly. 
* \#289790 - [Android, iOS] The toolbar text is now localized properly. 
* \#292689 - [iOS] Application will no longer crash while searching the PDF document. 
* \#290301 - [UWP] Memory will no longer be leaked in the PDF viewer. 
* \#288724 - Text selection is now working properly in the PDF document. 